--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,7 @@
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
+            "chmod -R 777 public/",
             "@auto-scripts"
         ],
         "post-update-cmd": [
