--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
+        "symfony/security-csrf": "6.0.*",
         "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
